...

    <string name="provider_name">BBCT Data</string>

    <!-- Activity titles -->
    <string name="create_card_title">Create Card</string>
    <string name="edit_card_title">Edit Card</string>
    <string name="filter_cards_title">Filter Cards</string>
    <string name="about_title">About</string>
    <string name="duplicate_card_title">Duplicate Card</string>

    <!-- Field labels -->
    <string name="autographed">Autographed</string>
    <string name="condition">Condition</string>
    <string name="brand">Brand</string>
...
    <string name="count_hint">Enter quantity.</string>
    <string name="player_name_hint">Enter player name.</string>
    <string name="team_hint">Enter team.</string>
    <string name="player_position_hint">Select position.</string>

    <!-- Menu text -->
    <string name="add_menu">Add Cards</string>
    <string name="filter_menu">Filter Cards</string>
    <string name="clear_filter_menu">Clear Filter</string>
    <string name="about_menu">About</string>
    <string name="delete_menu">Delete</string>
    <string name="select_all_menu">Select All</string>
    <string name="save_menu">Save</string>

    <!-- Text in About activity -->
    <string name="version_text">Version %1$s</string>
    <string name="copyright">Copyright 2012–25 by codeguru</string>
    <string name="email"><b>Email:</b> &lt;bbct-list@lists.sourceforge.net&gt;</string>
    <string name="website"><b>Website:</b> &lt;https://github.com/BaseballCardTracker/bbct/wiki&gt;</string>
...
